# BE_python_smartdraw

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  ESP32_MQTT_Motor_Control_Plan.md  ESP32_UPDATE_GUIDE.md  FLUTTER_APP_INTEGRATION.md  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  mosquitto.conf  pyproject.toml  requirements.txt  task.md
.marscode/: deviceInfo.json
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: classification.py  detection.py  drawer.py  fcm.py  health.py  light.py  pipeline.py
app/core/: config.py  dependencies.py  frame_buffer.py  logger.py  video_stream.py
app/db/: session.py
app/models/: fcm_token.py
app/schemas/: fcm.py  light.py
app/services/: classification.py  detection.py  drawer_controller.py  drawer_item_state.py  drawer_state.py  fcm_token_service.py  image_enhancement.py  light_control.py  live_viewer.py  motion.py  mqtt_client.py  mqtt_state.py  mqtt_subscriber.py  notification_service.py  pipeline.py
